--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,4 +8,13 @@
   font-size: 12px;
   text-transform: uppercase;
   color: #ffffff;
+  &_top {
+    margin-top: 4px;
+  }
+  &_main {
+    width: 303px;
+    height: 54px;
+    font-size: 16px;
+    margin-top: 67px;
+  }
 }
