--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -2,4 +2,53 @@
   min-height: 650px;
   padding: 21px 0 93px;
   background: url(/src/img/Run_bg.png) center (center/cover) no-repeat;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 90px;
+  }
+  &__header {
+    font-weight: 700;
+    font-size: 42px;
+    text-transform: uppercase;
+    color: #ffffff;
+    line-height: 42px;
+  }
+  &__subheader {
+    font-weight: 500;
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #ffffff;
+    line-height: 24px;
+    margin-top: 17px;
+  }
+  &__icons {
+    margin-top: 65px;
+    width: 425px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__icon {
+    width: 108px;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 500;
+    color: #ffffff;
+    img {
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 20px;
+    }
+  }
+  &__link {
+    font-weight: 500;
+    font-size: 16px;
+    margin-top: 18px;
+    a {
+      text-decoration: underline;
+      text-transform: uppercase;
+      color: #ffffff;
+    }
+  }
 }
