--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -45,6 +45,7 @@
     font-weight: 500;
     font-size: 16px;
     margin-top: 18px;
+    color: #ffffff;
     a {
       text-decoration: underline;
       text-transform: uppercase;
