added new section and mobile  version

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,9 @@
 @import './blocks/header';
 @import './blocks/buttons';
 @import './blocks/advantages';
+@import './blocks/consultation';
+@import './blocks/titles';
+@import './blocks/forms';
 @import './base/media';
 * {
   font-family: 'Museo Sans Cyrl', sans-serif;
