--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -23,4 +23,15 @@
   .promo__wrapper {
     align-items: center;
   }
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .title_left {
+    text-align: center;
+  }
+  .consultation__description {
+    text-align: center;
+  }
 }
