--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -17,4 +17,10 @@
     font-size: 16px;
     margin-top: 67px;
   }
+  &_submit {
+    width: 100%;
+    height: 55px;
+    border-radius: 5px;
+    font-size: 16px;
+  }
 }
