--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import './blocks/consultation';
 @import './blocks/titles';
 @import './blocks/forms';
+@import './blocks/carousel';
 @import './base/media';
 * {
   font-family: 'Museo Sans Cyrl', sans-serif;
